--- a/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
@@ -61,7 +61,12 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
   # tag:
 {%- endif %}
 
+  ## Container digest to use. Used to pull the image instead of the image tag / Chart appVersion if set
+  # digest:
+
   ## Whether the image should be pulled on container startup. Valid values are Always, IfNotPresent and Never
+  ## If this isn't provided it defaults to Always when using the image tag / Chart appVersion or
+  ## IfNotPresent if using a digest
   # pullPolicy:
 
   ## A list of pull secrets to use for this image
