--- a/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
@@ -8,6 +8,17 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 # This file is generated. Do not edit directly. Edit source/values.yaml.j2 instead to make changes
 {%- endmacro %}
 
+{% macro global() %}
+## Global values available to all sub-charts
+global:
+  ## ESS specific globals, namespaced to avoid interference with other charts
+  ess: {}
+    ## The server name of the Matrix Stack. This gets embedded in user IDs & room IDs
+    ## It can not change after the initial deployment.
+    # server_name: ess.localhost
+
+{%- endmacro %}
+
 {% macro containersSecurityContext(key='containersSecurityContext') %}
 ## A subset of SecurityContext. ContainersSecurityContext holds pod-level security attributes and common container settings
 {{ key }}:
