--- a/charts/matrix-stack/source/values.yaml.j2
+++ b/charts/matrix-stack/source/values.yaml.j2
@@ -5,6 +5,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #}
 {% import 'sub_schema_values.yaml.j2' as sub_schema_values -%}
 {{ sub_schema_values.generatedFileWarning() }}
+{{ sub_schema_values.global() }}
 
 element-web:
   enabled: true
