--- a/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
@@ -34,6 +34,19 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
     type: RuntimeDefault
 {%- endmacro %}
 
+{% macro credential(credential_description, key) %}
+## {{ credential_description }}.
+## It can either be provided inline in the Helm chart e.g.:
+## {{ key }}:
+##   value: SecretValue
+##
+## Or it can be provided via an existing Secret e.g.:
+## {{ key }}:
+##   secret: existing-secret
+##   secretKey: key-in-secret
+{{ key }}: {}
+{%- endmacro %}
+
 {% macro extraEnv(key='extraEnv') %}
 ## Defines additional environment variables to be injected onto this workload
 ## e.g.
