Add hostAliases sub-schema

--- a/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
@@ -56,6 +56,21 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{ key }}: []
 {%- endmacro %}
 
+{% macro hostAliases(key="hostAliases") %}
+## The list of hosts aliases to configure on the pod spec.
+## It should be avoid as much as possible to use this feature.
+## Please prefer using an DNS entry to resolve your hostnames.
+## This can be used as a workaround when entries cannot be resolved using DNS, for example for our automated testings.
+## e.g.
+## {{ key }}:
+## - ip: 192.0.2.1  # An IP resolution to add to /etc/hosts
+##   # A list of hostnames to be associated with the above IP
+##   hostnames:
+##   - ess.localhost
+##   - synapse.ess.localhost
+{{ key }}: []
+{%- endmacro %}
+
 {% macro image(registry, repository, tag='', key='image') %}
 # Details of the image to be used
 {{ key }}:
