--- a/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
@@ -129,7 +129,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 # {{ key }}: {}
 {%- endmacro %}
 
-{% macro podSecurityContext(user_id, group_id, key='podSecurityContext') %}
+{% macro podSecurityContext(user_id, group_id, filesystem_group_id=-1, key='podSecurityContext') %}
 ## A subset of PodSecurityContext. PodSecurityContext holds pod-level security attributes and common container settings
 {{ key }}:
   ## A special supplemental group that applies to all containers in a pod. Some volume types allow the Kubelet to
@@ -139,7 +139,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
   ## 2. The setgid bit is set (new files created in the volume will be owned by FSGroup)## 3. The permission bits are OR'd with rw-rw----
   ##
   ## If unset, the Kubelet will not modify the ownership and permissions of any volume.
-  fsGroup: {{ group_id }}
+  fsGroup: {{ group_id if (filesystem_group_id == -1) else filesystem_group_id }}
 
   ## fsGroupChangePolicy defines behavior of changing ownership and permission of the volume before being exposed inside Pod.
   ## This field will only apply to volume types which support fsGroup based ownership(and permissions).
@@ -147,7 +147,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
   # fsGroupChangePolicy:
 
   ## The GID to run the entrypoint of the container process. Uses runtime default if unset.
-  # runAsGroup:
+  runAsGroup: {{ group_id }}
 
   ## Indicates that the container must run as a non-root user. If true, the Kubelet will validate the image at runtime to ensure that it does not run as UID 0 (root) and fail to start the container if it does. If unset or false, no such validation will be performed.
   runAsNonRoot: true
