Default the postgres-libpq values to sslMode=prefer rather than require

--- a/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
@@ -225,7 +225,7 @@ global:
   # database:
 
   ## TLS settins to use for the PostgreSQL connection
-  sslMode: require
+  sslMode: prefer
 {{ credential("PostgreSQL password", "password") | indent(2) }}
 {%- endmacro %}
 
