Synapse: add some basic worker docs that were missed

--- a/charts/synapse/source/values.yaml.j2
+++ b/charts/synapse/source/values.yaml.j2
@@ -35,6 +35,12 @@ additional: {}
 ## - registrationFileConfigMap: test-appservice
 appservices: []
 
+## Additional Synapse processes managed by this chart
+## e.g.
+## workers:
+##   client-reader:
+##     instances: 2
+##   event-creator: {}
 workers: {}
 
 ## Synapse's logging settings
