Synapse: fix typo in appservices comment

--- a/charts/synapse/source/values.yaml.j2
+++ b/charts/synapse/source/values.yaml.j2
@@ -30,7 +30,7 @@ media:
 ##   configSecretKey: shared.yaml
 additional: {}
 
-## Details of Application Service registration files to giev to Synapse
+## Details of Application Service registration files to give to Synapse
 ## e.g.
 ## appservices:
 ## - registrationFileConfigMap: test-appservice
