--- a/charts/synapse/source/values.yaml.j2
+++ b/charts/synapse/source/values.yaml.j2
@@ -7,6 +7,8 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {% import 'synapse_sub_schema_values.yaml.j2' as synapse_sub_schema_values -%}
 {{ sub_schema_values.generatedFileWarning() }}
 
+{{ sub_schema_values.global() }}
+
 {{ sub_schema_values.postgresLibPQ() }}
 
 ## Configures the media store for Synapse
