Synapse: allow deploying ServiceMonitors for Synapse and HAProxy

--- a/charts/synapse/source/values.yaml.j2
+++ b/charts/synapse/source/values.yaml.j2
@@ -82,6 +82,7 @@ logging:
 {{ sub_schema_values.nodeSelector() }}
 {{ sub_schema_values.podSecurityContext(user_id='10091', group_id='10091') }}
 {{ sub_schema_values.resources(requests_memory='100Mi', requests_cpu='100m', limits_memory='4Gi') }}
+{{ sub_schema_values.serviceMonitors() }}
 {{ sub_schema_values.tolerations() }}
 {{ sub_schema_values.workloadAnnotations() }}
 
@@ -92,6 +93,7 @@ haproxy:
 {{ sub_schema_values.nodeSelector() | indent(2) }}
 {{ sub_schema_values.podSecurityContext(user_id='10001', group_id='10001') | indent(2) }}
 {{ sub_schema_values.resources(requests_memory='100Mi', requests_cpu='100m', limits_memory='200Mi') | indent(2) }}
+{{ sub_schema_values.serviceMonitors() | indent(2) }}
 {{ sub_schema_values.tolerations() | indent(2) }}
 {{ sub_schema_values.workloadAnnotations() | indent(2) }}
 
