--- a/charts/element-web/source/values.yaml.j2
+++ b/charts/element-web/source/values.yaml.j2
@@ -4,27 +4,32 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #}
 
+
 {% import 'sub_schema_values.yaml.j2' as sub_schema_values -%}
-{{ sub_schema_values.generatedFileWarning() }}
-{{ sub_schema_values.global() }}
 
-## Arbitrary extra config to inject into Element Web's config.json a a YAML/JSON object
-additional: {}
+{{- sub_schema_values.ess() }}
 
-## Defines which Matrix server this Element Web should point at.
-defaultMatrixServer: {}
-  ## URL where the Matrix server is hosted
-  # baseUrl:
+elementWeb:
+  enabled: true
+  {{- sub_schema_values.generatedFileWarning() | indent(2) -}}
 
-# Number of Element Web replicas to start up
-replicas: 2
-{{ sub_schema_values.image(registry='docker.io', repository='vectorim/element-web') }}
-{{ sub_schema_values.ingress() }}
-{{ sub_schema_values.labels() }}
-{{ sub_schema_values.workloadAnnotations() }}
-{{ sub_schema_values.containersSecurityContext() }}
-{{ sub_schema_values.nodeSelector() }}
-{{ sub_schema_values.podSecurityContext(user_id='10004', group_id='10004') }}
-{{ sub_schema_values.resources(requests_memory='50Mi', requests_cpu='50m', limits_memory='200Mi') }}
-{{ sub_schema_values.serviceAccount() }}
-{{ sub_schema_values.tolerations() }}
+  ## Arbitrary extra config to inject into Element Web's config.json a a YAML/JSON object
+  additional: {}
+
+  ## Defines which Matrix server this Element Web should point at.
+  defaultMatrixServer: {}
+    ## URL where the Matrix server is hosted
+    # baseUrl:
+
+  # Number of Element Web replicas to start up
+  replicas: 2
+  {{- sub_schema_values.image(registry='docker.io', repository='vectorim/element-web') | indent(2) -}}
+  {{- sub_schema_values.ingress() | indent(2) -}}
+  {{- sub_schema_values.labels() | indent(2) -}}
+  {{- sub_schema_values.workloadAnnotations() | indent(2) -}}
+  {{- sub_schema_values.containersSecurityContext() | indent(2) -}}
+  {{- sub_schema_values.nodeSelector() | indent(2) -}}
+  {{- sub_schema_values.podSecurityContext(user_id='10004', group_id='10004') | indent(2) -}}
+  {{- sub_schema_values.resources(requests_memory='50Mi', requests_cpu='50m', limits_memory='200Mi') | indent(2) -}}
+  {{- sub_schema_values.serviceAccount() | indent(2) -}}
+  {{- sub_schema_values.tolerations() | indent(2) }}
