--- a/charts/matrix-stack/source/values.yaml.j2
+++ b/charts/matrix-stack/source/values.yaml.j2
@@ -9,7 +9,8 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{ sub_schema_values.global() }}
 
 element-web:
-  enabled: true
+  {% macro elementWebValues() %}{% include 'element-web/source/values.yaml.j2'%}{% endmacro %}
+  {{- elementWebValues() | trim | indent(2) }}
 
 synapse:
   enabled: true
