synapse: cleanup schema to allow enabled false

--- a/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
@@ -80,7 +80,9 @@ global:
 ## {{ key }}:
 ##   secret: existing-secret
 ##   secretKey: key-in-secret
-{{ key }}: {}
+{{ key }}:
+   secret: change-me
+   secretKey: change-me-key
 {%- endmacro %}
 
 {% macro extraEnv(key='extraEnv') %}
