--- a/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/sub_schemas/sub_schema_values.yaml.j2
@@ -80,9 +80,7 @@ global:
 ## {{ key }}:
 ##   secret: existing-secret
 ##   secretKey: key-in-secret
-{{ key }}:
-   secret: change-me
-   secretKey: change-me-key
+{{ key }}: {}
 {%- endmacro %}
 
 {% macro extraEnv(key='extraEnv') %}
