--- a/charts/matrix-stack/source/values.yaml.j2
+++ b/charts/matrix-stack/source/values.yaml.j2
@@ -7,9 +7,10 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {% import 'sub_schema_values.yaml.j2' as sub_schema_values -%}
 {{ sub_schema_values.generatedFileWarning() }}
 {{ sub_schema_values.global() }}
+{{ sub_schema_values.ess() }}
 
-element-web:
-  {% macro elementWebValues() %}{% include 'element-web/source/values.yaml.j2'%}{% endmacro %}
+elementWeb:
+  {% macro elementWebValues() %}{% include 'element-web/values.yaml.j2'%}{% endmacro %}
   {{- elementWebValues() | trim | indent(2) }}
 
 synapse:
