elementWeb: use Synapse ingress host for matrix server base url

--- a/charts/matrix-stack/source/element-web.yaml.j2
+++ b/charts/matrix-stack/source/element-web.yaml.j2
@@ -13,6 +13,7 @@ enabled: true
 additional: {}
 
 ## Defines which Matrix server this Element Web should point at.
+# If empty, it will try to use Synapse Ingress Host.
 defaultMatrixServer: {}
   ## URL where the Matrix server is hosted
   # baseUrl:
