Add topologySpreadConstraints support

--- a/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
@@ -23,6 +23,8 @@ ess:
   ## imagePullSecrets:
   ## - name: ess-pull-secret
   imagePullSecrets: []
+
+  {{- topologySpreadConstraints(global=true) | indent(2) }}
 {%- endmacro %}
 
 
@@ -309,6 +311,22 @@ labels: {}
 ##   operator:
 ##   value:
 
+{{ key }}: []
+{%- endmacro %}
+
+{% macro topologySpreadConstraints(global=false, key='topologySpreadConstraints') %}
+## TopologySpreadConstraints describes how Pods for {{ 'a' if global else 'this' }} component should be spread between nodes.
+## https://kubernetes.io/docs/concepts/scheduling-eviction/topology-spread-constraints/ for in-depth details
+## labelSelector can be omitted and the chart will populate a sensible value for {{ 'each' if global else 'this' }} component.
+## Similarly `pod-template-hash` will be aded to `matchLabelKeys` if appropriate for {{ 'each' if global else 'this' }} component.
+## If any TopologySpreadConstraints are provided for a component any global TopologySpreadConstraints are ignored for that component.
+## e.g.
+## {{ key }}:
+## - maxSkew: 1
+##   topologyKey: topology.kubernetes.io/zone
+##   # nodeAffinityPolicy: Honor/Ignore
+##   # nodeTaintsPolicy: Honor/Ignore
+##   # whenUnsatisfiable: DoNotSchedule/ScheduleAnyway
 {{ key }}: []
 {%- endmacro %}
 
