--- a/charts/matrix-stack/source/values.yaml.j2
+++ b/charts/matrix-stack/source/values.yaml.j2
@@ -8,6 +8,8 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{ sub_schema_values.generatedFileWarning() }}
 {{ sub_schema_values.ess() }}
 
+## Components
+
 elementWeb:
   {% macro elementWebValues() %}{% include 'element-web.yaml.j2'%}{% endmacro %}
   {{- elementWebValues() | trim | indent(2) }}
