Provide a chart readme

--- a/charts/matrix-stack/source/synapse.yaml.j2
+++ b/charts/matrix-stack/source/synapse.yaml.j2
@@ -27,6 +27,9 @@ media:
 ## additional:
 ##   configSecret: custom-synapse-config
 ##   configSecretKey: shared.yaml
+##
+## Full details on available configuration options can be found at https://element-hq.github.io/synapse/latest/usage/configuration/config_documentation.html
+## Most settings are configurable but some settings are owned by the chart and can't overwritten
 additional: {}
 
 ## Details of Application Service registration files to give to Synapse
