--- a/charts/matrix-stack/source/init-secrets.yaml.j2
+++ b/charts/matrix-stack/source/init-secrets.yaml.j2
@@ -7,6 +7,9 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {% import 'sub_schema_values.yaml.j2' as sub_schema_values -%}
 enabled: true
 
+rbac:
+  create: true
+
 {{- sub_schema_values.labels() -}}
 {{- sub_schema_values.workloadAnnotations() -}}
 {{- sub_schema_values.containersSecurityContext() -}}
