MAS: Fixups in values and json schema

--- a/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
@@ -332,9 +332,9 @@ labels: {}
 ## This can be provided in-line in the Helm Chart and/or via an existing Secret
 ## e.g.
 ## additional:
-##   0-guestConfig:
+##   0-customConfig:
 ##     config: |
-##       allow_guest_access: true
+##       <any valid configuration>
 ##   1-customConfig:
 ##     configSecret: custom-synapse-config
 ##     configSecretKey: shared.yaml
