mas: handle synapse / mas interface

--- a/charts/matrix-stack/source/matrixAuthenticationService.yaml.j2
+++ b/charts/matrix-stack/source/matrixAuthenticationService.yaml.j2
@@ -12,6 +12,7 @@ enabled: true
 
 {{ sub_schema_values.credential("Encryption secret", "encryptionSecret") }}
 {{ sub_schema_values.credential("Synapse - MAS Shared Secret", "synapseSharedSecret") }}
+{{ sub_schema_values.credential("Synapse - MAS OIDC Client Secret", "synapseOIDCClientSecret") }}
 
 ## Additional configuration to provide to Matrix Authentication Service.
 ## Each key under additional is an additioanal config to merge into Matrix Authentication Service config.yaml
