--- a/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
@@ -336,7 +336,7 @@ labels: {}
 ##     config: |
 ##       <any valid configuration>
 ##   1-customConfig:
-##     configSecret: custom-synapse-config
+##     configSecret: custom-config
 ##     configSecretKey: shared.yaml
 ##
 ## Most settings are configurable but some settings are owned by the chart and can't overwritten
