postgres: init work

--- a/charts/matrix-stack/source/values.yaml.j2
+++ b/charts/matrix-stack/source/values.yaml.j2
@@ -25,6 +25,10 @@ matrixAuthenticationService:
   {% macro matrixAuthenticationServiceValues() %}{% include 'matrixAuthenticationService.yaml.j2'%}{% endmacro %}
   {{- matrixAuthenticationServiceValues() | trim | indent(2) }}
 
+postgresql:
+  {% macro postgresqlValues() %}{% include 'postgresql.yaml.j2'%}{% endmacro %}
+  {{- postgresqlValues() | trim | indent(2) }}
+
 synapse:
   {% macro synapseValues() %}{% include 'synapse.yaml.j2'%}{% endmacro %}
   {{- synapseValues() | trim | indent(2) }}
