matrix-stack: enable a common postgres server

--- a/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
@@ -241,7 +241,7 @@ labels: {}
 
 {% macro postgresLibPQ(key="postgres") %}
 ## Details of the Postgres Database to use
-{{ key }}:
+{{ key }}: {}
   ## PostgreSQL database host
   # host:
 
