postgresql: pass integration tests

--- a/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
@@ -111,7 +111,7 @@ imagePullSecrets: []
   ## The tag of the container image to use.
   ## Defaults to the Chart's appVersion if not set
 {%- if tag | length > 0 %}
-  tag: {{ tag }}
+  tag: "{{ tag }}"
 {%- else %}
   # tag:
 {%- endif %}
