postgres: use a distinct user/password for each component

--- a/charts/matrix-stack/source/postgres.yaml.j2
+++ b/charts/matrix-stack/source/postgres.yaml.j2
@@ -11,7 +11,10 @@ postgresExporter:
   {{- sub_schema_values.containersSecurityContext()| indent(2) }}
 
 {{- sub_schema_values.credential("Postgres Admin Password", "adminPassword", initIfAbsent=true) }}
-{{- sub_schema_values.credential("ESS Role Password", "essPassword", initIfAbsent=true) }}
+
+essPasswords:
+  {{- sub_schema_values.credential("Synapse DB Password", "synapse", initIfAbsent=true) | indent(2) }}
+  {{- sub_schema_values.credential("Matrix Authentication Service DB Password", "matrixAuthenticationService", initIfAbsent=true) | indent(2) }}
 
 {{- sub_schema_values.persistentVolumeClaim("storage") }}
 {{- sub_schema_values.image(registry='docker.io', repository='postgres', tag='17-alpine') }}
