postgres: fix typo in TLS Settings

--- a/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
@@ -254,7 +254,7 @@ labels: {}
   ## PostgreSQL database name
   # database:
 
-  ## TLS settins to use for the PostgreSQL connection
+  ## TLS settings to use for the PostgreSQL connection
   # sslMode: prefer
 {{ (credential("PostgreSQL password", "password", commented=True) | indent(2)) }}
 {%- endmacro %}
