--- a/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
@@ -11,7 +11,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {% macro ess() %}
 ## Common configuration that impacts all components in the chart
 
-## The matrix-tools iamge, used in multiple components
+## The matrix-tools image, used in multiple components
 matrixTools:
 {{ image(registry="ghcr.io", repository="element-hq/ess-helm/matrix-tools", tag="0.2.1") | indent(2) }}
 
