implement certManager automatic configuration

--- a/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
@@ -15,6 +15,13 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 matrixTools:
 {{ image(registry="ghcr.io", repository="element-hq/ess-helm/matrix-tools", tag="0.3.0") | indent(2) }}
 
+## CertManager Issuer to configure by default automatically on all ingresses
+## If configured, the chart will automatically generate the tlsSecret name for all ingresses
+certManager: {}
+  ## Choose one of clusterIssuer or issuer
+  # clusterIssuer:
+  # issuer:
+
 ## The server name of the Matrix Stack. This gets embedded in user IDs & room IDs
 ## It can not change after the initial deployment.
 # serverName: ess.localhost
