--- a/charts/matrix-stack/source/wellKnownDelegation.yaml.j2
+++ b/charts/matrix-stack/source/wellKnownDelegation.yaml.j2
@@ -10,6 +10,11 @@ enabled: true
 {{ sub_schema_values.labels() }}
 {{ sub_schema_values.ingress() }}
 
+## If ElementWeb is deployed, the base domain will redirect to it by default
+## You can override with another URL here.
+## If ElementWeb is not deployed and this is not defined, no base domain URL redirect will be set.
+baseDomainRedirectURL: ""
+
 ## Additional configuration to provide to all WellKnown static file
 ## Configuration should be provided as JSON strings
 additional:
