--- a/charts/matrix-stack/source/synapse.yaml.j2
+++ b/charts/matrix-stack/source/synapse.yaml.j2
@@ -7,6 +7,8 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {% import 'sub_schema_values.yaml.j2' as sub_schema_values -%}
 {% import 'synapse_sub_schema_values.yaml.j2' as synapse_sub_schema_values -%}
 enabled: true
+## A hook job will make sure that Synapse config is valid before continuing
+enableCheckConfigHook: true
 {{- sub_schema_values.postgresLibPQ() }}
 ## Configures the media store for Synapse
 media:
