Be consistent about number of replicas running

--- a/charts/matrix-stack/source/haproxy.yaml.j2
+++ b/charts/matrix-stack/source/haproxy.yaml.j2
@@ -1,12 +1,12 @@
 {#
-Copyright 2024 New Vector Ltd
+Copyright 2024-2025 New Vector Ltd
 
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #}
 
 {% import 'sub_schema_values.yaml.j2' as sub_schema_values -%}
 
-replicas: 2
+replicas: 1
 {{- sub_schema_values.image(registry='docker.io', repository='library/haproxy', tag='3.1-alpine') }}
 {{- sub_schema_values.labels() }}
 {{- sub_schema_values.workloadAnnotations() }}
