--- a/charts/matrix-stack/source/element-web.yaml.j2
+++ b/charts/matrix-stack/source/element-web.yaml.j2
@@ -1,5 +1,5 @@
 {#
-Copyright 2024 New Vector Ltd
+Copyright 2024-2025 New Vector Ltd
 
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #}
@@ -16,7 +16,7 @@ enabled: true
 additional: "{}"
 
 # Number of Element Web replicas to start up
-replicas: 2
+replicas: 1
 {{- sub_schema_values.image(registry='docker.io', repository='vectorim/element-web', tag='v1.11.92') -}}
 {{- sub_schema_values.ingress() -}}
 {{- sub_schema_values.labels() -}}
